# neurow-brain-cloud

./: .gitignore  README.md
.github/workflows/: database-keepalive.yml
brain-cloud/: .env.example  pyproject.toml
brain-cloud/brain_cloud/: config.py  hackathon_mapper.py  models.py  server.py  temporal.py  utils.py
brain-cloud/brain_cloud/coaching/: __init__.py  prompt_assembler.py  signal_detector.py  turn_registry.py
brain-cloud/brain_cloud/pipelines/: export.py  read.py  write.py
brain-cloud/brain_cloud/stores/: __init__.py  mem0.py  neo4j.py  qdrant.py  supabase.py
brain-cloud/scripts/: cleanup_before_load.py  cleanup_test_memories.py  cleanup_test_profiles.py  load_coaching_data.py  load_hackathon_data.py  load_prompt_templates.py  verify_w1c.py
brain-cloud/tests/: conftest.py  test_coaching_s5.py  test_export.py  test_onboarding_port.py  test_read.py  test_smoke.py  test_temporal.py  test_welcome_message.py  test_write.py
data/Theo_Nakamura_P05/: calendar.jsonl  conversations.jsonl  emails.jsonl  files_index.jsonl  lifelog.jsonl  social_posts.jsonl  transactions.jsonl
desktop/: .env.example  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vitest.config.ts
desktop/electron/: claude.ts  main.ts  neo4j.ts  preload.ts  supabase.ts  tsconfig.json
desktop/electron/__tests__/: ndjson-handler.test.ts  supabase.test.ts
desktop/public/: demo_graph.json  theo_graph.json
desktop/src/app/: globals.css  layout.tsx  (+1 more)
scripts/: clean_data.py  database_keepalive.py  shift_timestamps.py
scripts/checkpoints/: README.md  theo_v1.sql
(+124 files in other folders)
