[project]
name = "brain-cloud"
version = "0.1.0"
description = "Brain Cloud MCP server — four-store cognitive memory architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "supabase>=2.11",
    "neo4j>=5.0",
    "qdrant-client>=1.7",
    "mem0ai>=0.1",
    "openai>=1.0",
    "anthropic>=0.40",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
brain-cloud = "brain_cloud.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_cloud"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
